add google map and progress bar component

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
       crossorigin="anonymous">  
     </script>
+      <script src="https://npmcdn.com/react@0.14.2/dist/react.min.js"></script>
+  <script src="https://npmcdn.com/react-dom@0.14.2/dist/react-dom.min.js"></script>
+  <script src="https://npmcdn.com/google-map-react@0.14.6/dist/GoogleMapReact.js"></script>
     <div id="root"></div>
     <!--
       Dev  : `npm start` or `yarn start`
